# regex-railroad.nvim

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.lua  build.ps1  build.sh
.github/workflows/: lua.yml  release.yml  rust.yml
lua/regex-railroad/: command.lua  config.lua  consts.lua  defaults.lua  init.lua  job.lua  utils.lua
plugin/: regex-railroad.lua
src/: error.rs  extract.rs  main.rs  parser.rs  railroad.rs  renderer.rs  test.rs  text.rs
src/railroad/: draw.rs  renderer.rs  sym.rs
test/: javascript.js  python.py
