[package]
name = "regex-railroad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
neovim-lib = "0.6.1"
rmpv = "1.3.0"
rsnvim = "0.1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
